expect to complete saturday afernoon

--- a/pandas-challenge/HeroesOfPymoli/HeroesOfPymoli.ipynb
+++ b/pandas-challenge/HeroesOfPymoli/HeroesOfPymoli.ipynb
@@ -153,18 +153,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'unique_players' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-21efea61f0f2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mnum_players\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplayers_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"SN\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcount\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'There are {len(unique_players)} players.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'unique_players' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 576 players.\n"
      ]
     }
    ],
@@ -177,7 +173,7 @@
     "                     keep = 'first', inplace = False)\n",
     "\n",
     "num_players = players_df[\"SN\"].count()\n",
-    "print(f'There are {len(unique_players)} players.')"
+    "print(f'There are {num_players} players.')"
    ]
   },
   {
@@ -236,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,21 +259,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "----------------- Gender Demographics ------------------\n",
-      "Percentage and Count of Male Players: % 84.02777777777779 (484)\n",
-      "Percentage and Count of Male Players: % 14.0625 (81)\n",
-      "Percentage and Count of Other Gendered Players: % 1.9097222222222223 (11)\n",
-      "--------------------------------------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Print output \n",
     "print(f'----------------- Gender Demographics ------------------')\n",
@@ -302,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
