updated with purchaseing data by gender demographics

--- a/pandas-challenge/HeroesOfPymoli/HeroesOfPymoli.ipynb
+++ b/pandas-challenge/HeroesOfPymoli/HeroesOfPymoli.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -189,22 +189,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_items = np.unique(purchase_data[\"Item ID\"])\n",
+    "unique_items = np.unique(purchase_df[\"Item ID\"])\n",
     "items_num = len(unique_items)\n",
-    "price_avg = np.average(purchase_data[\"Price\"])\n",
-    "purchases_count = purchase_data[\"Purchase ID\"].count()\n",
-    "revenue = np.sum(purchase_data[\"Price\"])"
+    "price_avg = np.average(purchase_df[\"Price\"])\n",
+    "purchases_count = purchase_df[\"Purchase ID\"].count()\n",
+    "revenue = np.sum(purchase_df[\"Price\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------- Purchasing Analysis ------------------\n",
+      "There are 183 unique items.\n",
+      "They were purchased at an average price of $ 3.05.\n",
+      "576 players made 780 purchases.\n",
+      "--------------------------------------------------------\n",
+      "Total Revenue: $ 2379.77\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unique Items</th>\n",
+       "      <th>Average Price</th>\n",
+       "      <th>Number of Purchases</th>\n",
+       "      <th>Total Revenue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>183</td>\n",
+       "      <td>$ 3.05</td>\n",
+       "      <td>780</td>\n",
+       "      <td>$ 2379.77</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unique Items Average Price  Number of Purchases Total Revenue\n",
+       "0           183        $ 3.05                  780     $ 2379.77"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "results = {'Unique Items': [items_num], 'Average Price': [f'$ {round(price_avg, 2)}'], \n",
     "          'Number of Purchases': [purchases_count], 'Total Revenue': [f'$ {revenue}']}\n",
@@ -220,7 +281,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -232,9 +292,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Count</th>\n",
+       "      <th>Percentage of Players</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gender</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>Female</td>\n",
+       "      <td>81</td>\n",
+       "      <td>14.06 %</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Male</td>\n",
+       "      <td>484</td>\n",
+       "      <td>84.03 %</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Other / Non-Disclosed</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1.91 %</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       Total Count Percentage of Players\n",
+       "Gender                                                  \n",
+       "Female                          81               14.06 %\n",
+       "Male                           484               84.03 %\n",
+       "Other / Non-Disclosed           11                1.91 %"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# use data frame of unique players to create gender data\n",
     "players_df.set_index(\"Gender\")\n",
@@ -254,14 +377,27 @@
     "gender_percentage = [f'{round(val/num_players*100, 2)} %' for val in gender_count_df[\"SN\"]]\n",
     "\n",
     "# assemble the final dataframe\n",
-    "gender_demo_df = pd.DataFrame(data={\"Total Count\": gender_count_df[\"SN\"], \"Percentage of Players\": gender_percentage})                      "
+    "gender_demo_df = pd.DataFrame(data={\"Total Count\": gender_count_df[\"SN\"], \"Percentage of Players\": gender_percentage})\n",
+    "gender_demo_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------- Gender Demographics ------------------\n",
+      "Percentage and Count of Male Players: % 84.02777777777779 (484)\n",
+      "Percentage and Count of Male Players: % 14.0625 (81)\n",
+      "Percentage and Count of Other Gendered Players: % 1.9097222222222223 (11)\n",
+      "--------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "# Print output \n",
     "print(f'----------------- Gender Demographics ------------------')\n",
@@ -286,14 +422,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# get the average purchase total per person\n",
+    "groupby_SN_purchase_df = purchase_df.groupby(\"SN\")\n",
+    "avg_purchase_tot_perSN = groupby_SN_purchase_df[\"Price\"].sum()/groupby_SN_purchase_df[\"Price\"].count()\n",
+    "avg_purchase_tot_perSN_df = pd.DataFrame(data=avg_purchase_tot_perSN)                                          \n",
+    "avg_purchase_tot_perSN_df.columns = ['Avg Total Purchase per Person']\n",
+    "\n",
+    "# merge avg purchase_tot_perSN with players data\n",
+    "players_df.set_index(\"SN\")\n",
+    "players_df = pd.merge(players_df, avg_purchase_tot_perSN_df, on=\"SN\")\n",
+    "\n",
+    "# groupby purchases on gender and get values\n",
     "grouped_purchase_df = purchase_df.groupby(\"Gender\")\n",
     "purch_count = grouped_purchase_df[\"Purchase ID\"].count()\n",
     "avg_purchase = grouped_purchase_df[\"Price\"].sum()/purch_count\n",
-    "revenue = grouped_purchase_df[\"Price\"].sum()"
+    "revenue = grouped_purchase_df[\"Price\"].sum()\n",
+    "\n",
+    "# groupby players with average purchase data on gender and get values\n",
+    "groupby_gender_players_df = players_df.groupby(\"Gender\")\n",
+    "avg_total_purchase = groupby_gender_players_df[\"Avg Total Purchase per Person\"].sum()/groupby_gender_players_df[\"Avg Total Purchase per Person\"].count()\n",
+    "\n",
+    "# Build results data frame\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Average Purchase Price</th>\n",
+       "      <th>Total Purchase Value</th>\n",
+       "      <th>Avg Total Purchase per Person</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gender</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>Female</td>\n",
+       "      <td>113</td>\n",
+       "      <td>3.203009</td>\n",
+       "      <td>361.94</td>\n",
+       "      <td>3.194835</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Male</td>\n",
+       "      <td>652</td>\n",
+       "      <td>3.017853</td>\n",
+       "      <td>1967.64</td>\n",
+       "      <td>3.014269</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Other / Non-Disclosed</td>\n",
+       "      <td>15</td>\n",
+       "      <td>3.346000</td>\n",
+       "      <td>50.19</td>\n",
+       "      <td>3.348636</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       Purchase Count  Average Purchase Price  \\\n",
+       "Gender                                                          \n",
+       "Female                            113                3.203009   \n",
+       "Male                              652                3.017853   \n",
+       "Other / Non-Disclosed              15                3.346000   \n",
+       "\n",
+       "                       Total Purchase Value  Avg Total Purchase per Person  \n",
+       "Gender                                                                      \n",
+       "Female                               361.94                       3.194835  \n",
+       "Male                                1967.64                       3.014269  \n",
+       "Other / Non-Disclosed                 50.19                       3.348636  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results_df = pd.DataFrame(data={'Purchase Count': purch_count, 'Average Purchase Price':avg_purchase,\n",
+    "                               'Total Purchase Value': revenue, 'Avg Total Purchase per Person':avg_total_purchase})\n",
+    "results_df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Top Spenders\n",
+    "\n",
+    "* Identify the the top 5 spenders in the game by total purchase value, then list (in a table):\n",
+    "  * SN\n",
+    "  * Purchase Count\n",
+    "  * Average Purchase Price\n",
+    "  * Total Purchase Value\n",
+    "\n",
+    "### Most Popular Items\n",
+    "\n",
+    "* Identify the 5 most popular items by purchase count, then list (in a table):\n",
+    "  * Item ID\n",
+    "  * Item Name\n",
+    "  * Purchase Count\n",
+    "  * Item Price\n",
+    "  * Total Purchase Value\n",
+    "\n",
+    "### Most Profitable Items\n",
+    "\n",
+    "* Identify the 5 most profitable items by total purchase value, then list (in a table):\n",
+    "  * Item ID\n",
+    "  * Item Name\n",
+    "  * Purchase Count\n",
+    "  * Item Price\n",
+    "  * Total Purchase Value"
    ]
   },
   {
@@ -301,7 +576,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# in progress"
+   ]
   }
  ],
  "metadata": {
