--- a/matplotlib-challenge/Pymaceuticals/pymaceuticals.ipynb
+++ b/matplotlib-challenge/Pymaceuticals/pymaceuticals.ipynb
@@ -9,14 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib notebook\n",
+    "\n",
     "# Dependencies and Setup\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import scipy.stats as st\n",
+    "import numpy as np\n",
+    "from scipy.stats import sem\n",
     "\n",
     "# Study data files\n",
     "mouse_metadata = \"data/Mouse_metadata.csv\"\n",
@@ -31,13 +35,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -46,62 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[40.67323554,\n",
-       " 41.557808879999996,\n",
-       " 51.82058438,\n",
-       " 52.28893409,\n",
-       " 51.77615728000001,\n",
-       " 52.43173664,\n",
-       " 51.818479325,\n",
-       " 53.698742644999996,\n",
-       " 50.8546323,\n",
-       " 52.509284609999995]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
-    "\n",
-    "# Initialize data vars\n",
-    "mean      = []\n",
-    "median    = []\n",
-    "variance  = []\n",
-    "stddev    = []\n",
-    "sem       = []\n",
-    "\n",
-    "# Get a list of unique drugs\n",
-    "drug_regimes = mouse_study_data['Drug Regimen'].unique()\n",
-    "\n",
-    "# loop through drugs and for each one grab their data and calc stats\n",
-    "i = 0\n",
-    "for drug in drug_regimes:\n",
-    "    # get drug data\n",
-    "    drug_data_dfi = mouse_study_data.loc[mouse_study_data[\"Drug Regimen\"] == drug]\n",
-    "    \n",
-    "    # calc and store stats\n",
-    "    mean.append(drug_data_dfi[\"Tumor Volume (mm3)\"].mean())\n",
-    "    median.append(drug_data_dfi[\"Tumor Volume (mm3)\"].median())\n",
-    "    # mean.append(drug_data_dfi[\"Tumor Volume (mm3)\"].variance())\n",
-    "    \n",
-    "    # increment index\n",
-    "    i = i+1\n",
-    "\n",
-    "median"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -125,124 +67,124 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Mouse ID</th>\n",
-       "      <th>Timepoint</th>\n",
-       "      <th>Tumor Volume (mm3)</th>\n",
-       "      <th>Metastatic Sites</th>\n",
+       "      <th>drug regimes</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>meadian</th>\n",
+       "      <th>variance</th>\n",
+       "      <th>stddev</th>\n",
+       "      <th>SEM</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>b128</td>\n",
-       "      <td>0</td>\n",
-       "      <td>45.000000</td>\n",
-       "      <td>0</td>\n",
+       "      <td>Ramicane</td>\n",
+       "      <td>40.216745</td>\n",
+       "      <td>40.673236</td>\n",
+       "      <td>23.383692</td>\n",
+       "      <td>4.835669</td>\n",
+       "      <td>0.320955</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>f932</td>\n",
-       "      <td>0</td>\n",
-       "      <td>45.000000</td>\n",
-       "      <td>0</td>\n",
+       "      <td>Capomulin</td>\n",
+       "      <td>40.675741</td>\n",
+       "      <td>41.557809</td>\n",
+       "      <td>24.839296</td>\n",
+       "      <td>4.983904</td>\n",
+       "      <td>0.329346</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>g107</td>\n",
-       "      <td>0</td>\n",
-       "      <td>45.000000</td>\n",
-       "      <td>0</td>\n",
+       "      <td>Infubinol</td>\n",
+       "      <td>52.884795</td>\n",
+       "      <td>51.820584</td>\n",
+       "      <td>42.886388</td>\n",
+       "      <td>6.548770</td>\n",
+       "      <td>0.492236</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>a457</td>\n",
-       "      <td>0</td>\n",
-       "      <td>45.000000</td>\n",
-       "      <td>0</td>\n",
+       "      <td>Placebo</td>\n",
+       "      <td>54.033581</td>\n",
+       "      <td>52.288934</td>\n",
+       "      <td>60.830138</td>\n",
+       "      <td>7.799368</td>\n",
+       "      <td>0.581331</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>c819</td>\n",
-       "      <td>0</td>\n",
-       "      <td>45.000000</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1888</td>\n",
-       "      <td>r944</td>\n",
-       "      <td>45</td>\n",
-       "      <td>41.581521</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1889</td>\n",
-       "      <td>u364</td>\n",
-       "      <td>45</td>\n",
-       "      <td>31.023923</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1890</td>\n",
-       "      <td>p438</td>\n",
-       "      <td>45</td>\n",
-       "      <td>61.433892</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1891</td>\n",
-       "      <td>x773</td>\n",
-       "      <td>45</td>\n",
-       "      <td>58.634971</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1892</td>\n",
-       "      <td>b879</td>\n",
-       "      <td>45</td>\n",
-       "      <td>72.555239</td>\n",
-       "      <td>2</td>\n",
+       "      <td>Ceftamin</td>\n",
+       "      <td>52.591172</td>\n",
+       "      <td>51.776157</td>\n",
+       "      <td>39.069446</td>\n",
+       "      <td>6.250556</td>\n",
+       "      <td>0.469821</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1893 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Mouse ID  Timepoint  Tumor Volume (mm3)  Metastatic Sites\n",
-       "0        b128          0           45.000000                 0\n",
-       "1        f932          0           45.000000                 0\n",
-       "2        g107          0           45.000000                 0\n",
-       "3        a457          0           45.000000                 0\n",
-       "4        c819          0           45.000000                 0\n",
-       "...       ...        ...                 ...               ...\n",
-       "1888     r944         45           41.581521                 2\n",
-       "1889     u364         45           31.023923                 3\n",
-       "1890     p438         45           61.433892                 1\n",
-       "1891     x773         45           58.634971                 4\n",
-       "1892     b879         45           72.555239                 2\n",
-       "\n",
-       "[1893 rows x 4 columns]"
+       "  drug regimes       mean    meadian   variance    stddev       SEM\n",
+       "0     Ramicane  40.216745  40.673236  23.383692  4.835669  0.320955\n",
+       "1    Capomulin  40.675741  41.557809  24.839296  4.983904  0.329346\n",
+       "2    Infubinol  52.884795  51.820584  42.886388  6.548770  0.492236\n",
+       "3      Placebo  54.033581  52.288934  60.830138  7.799368  0.581331\n",
+       "4     Ceftamin  52.591172  51.776157  39.069446  6.250556  0.469821"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "study_results"
+    "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
+    "\n",
+    "# Initialize data vars\n",
+    "mean      = []\n",
+    "median    = []\n",
+    "variance  = []\n",
+    "stddev    = []\n",
+    "pym_sem   = []\n",
+    "\n",
+    "# Get a list of unique drugs\n",
+    "drug_regimes = mouse_study_data['Drug Regimen'].unique()\n",
+    "\n",
+    "# loop through drugs and for each one grab their data and calc stats\n",
+    "i = 0\n",
+    "for drug in drug_regimes:\n",
+    "    # get drug data\n",
+    "    drug_data_dfi = mouse_study_data.loc[mouse_study_data[\"Drug Regimen\"] == drug]\n",
+    "    \n",
+    "    # calc and store stats\n",
+    "    mean.append(drug_data_dfi[\"Tumor Volume (mm3)\"].mean())\n",
+    "    median.append(drug_data_dfi[\"Tumor Volume (mm3)\"].median())\n",
+    "    variance.append(np.var(drug_data_dfi[\"Tumor Volume (mm3)\"]))\n",
+    "    stddev.append(np.std(drug_data_dfi[\"Tumor Volume (mm3)\"]))\n",
+    "    pym_sem.append(sem(drug_data_dfi[\"Tumor Volume (mm3)\"]))\n",
+    "     \n",
+    "    # increment index\n",
+    "    i = i+1\n",
+    "    \n",
+    "# make table\n",
+    "data = {\n",
+    "    \"drug regimes\": drug_regimes,\n",
+    "    \"mean\": mean,\n",
+    "    \"meadian\": median,\n",
+    "    \"variance\": variance,\n",
+    "    \"stddev\": stddev,\n",
+    "    \"SEM\": pym_sem\n",
+    "}\n",
+    "\n",
+    "summary_stats = pd.DataFrame(data=data)\n",
+    "summary_stats.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +193,7 @@
        "array([ 0,  5, 10, 15, 20, 25, 30, 35, 40, 45])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
