added results analysis

--- a/matplotlib-challenge/Pymaceuticals/pymaceuticals_starter.ipynb
+++ b/matplotlib-challenge/Pymaceuticals/pymaceuticals_starter.ipynb
@@ -62,7 +62,7 @@
     "mouse_metadata = pd.read_csv(mouse_metadata)\n",
     "study_results = pd.read_csv(study_results)\n",
     "\n",
-    "# Combine the data into a single dataset"
+    "# Combine the data into a single dataset\""
    ]
   },
   {
@@ -215,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
